Version 4.0.0
- added support for 1.8.9 to latest(Untested due to being sleep-deprived)